// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders correctly when data is loaded 1`] = `
<div class="dashboard-container">
  <!---->
  <div class="dashboard-container__wrap">
    <navigationarea-stub class="regular-navigation"></navigationarea-stub>
    <div class="dashboard-container__wrap__column">
      <dashboardheader-stub></dashboardheader-stub>
      <div class="dashboard-container__main-area">
        <router-view-stub name="default"></router-view-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard renders correctly when data is loading 1`] = `
<div class="dashboard-container">
  <div class="loading-overlay active"><img src="../../static/images/register/Loading.gif"></div>
  <!---->
</div>
`;
